# yaade

./: .env.example  .gitignore  BUG_REPORT.md  LICENSE  README.md  ROADMAP.md  install.sh  pyproject.toml  uninstall.sh
.agents/: .aider.conf.yml  .cursorrules  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  CODY.md  OPENCODE.md  README.md  WINDSURF.md  continue.json  setup.sh
.claude/commands/: forget.md  memory-cleanup.md  memory-status.md  recall.md  remember.md
.github/workflows/: release.yml
app/: __init__.py  cli.py  main.py
app/models/: __init__.py  config.py  embedding_models.py
app/search/: embeddings.py  model_downloader.py
app/services/: memory_cleanup.py
app/storage/: __init__.py  vector_store.py
app/tui/: __init__.py  app.py  memory_manager.py  settings.py  themes.py
app/tui/screens/: __init__.py  main_menu.py  memory_management.py
app/tui/settings/: __init__.py  onboarding_screen.py  settings_screen.py  setup_screen.py
app/tui/styles/: app.tcss  modal.tcss  screens.tcss  settings.tcss
app/tui/utils/: __init__.py  config_manager.py  setup_runner.py
app/tui/widgets/: __init__.py  collapsible_item.py
scripts/: download-models.sh
setup/: mcp_config.py
setup/claude-code/: install-skills.sh  setup-mcp-linux.sh  setup-mcp-macos.sh  setup-mcp-windows.bat
setup/claude-code-skill/: README.md  SKILL.md  setup-skill-macos.sh  setup-skill-windows.bat
setup/claude-desktop/: setup-mcp-macos.sh  setup-mcp-windows.bat
setup/cursor/: setup-mcp-macos.sh  setup-mcp-windows.bat
setup/opencode/: setup-mcp-macos.sh  setup-mcp-windows.bat
tests/: __init__.py  conftest.py
tests/integration/: test_mcp_tools.py
tests/unit/: __init__.py
tests/unit/models/: test_config.py  test_memory.py
tests/unit/search/: __init__.py  test_embeddings.py  test_model_downloader.py
(+13 files in other folders)
